objects/ccrz__E_CartItem__c.object
<CustomObject>
    <description>Cart Items</description>
    <fields>
        <fullName>Actual_Tax__c</fullName>
        <label>Actual Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>ccrz__SubProdTerm__r.Billing_Display_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Proration_Price__c</fullName>
        <label>Custom Proration Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DBU_SaveForLater__c</fullName>
        <label>DBU SaveForLater</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>WishList</fullName>
                </value>
                <value>
                    <fullName>Save For Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dn_Price__c</fullName>
        <label>Dn Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NonCartUpdate__c</fullName>
        <formula>CONTAINS($Label.OSM_No_Quantity_Update,  ccrz__DisplayProduct__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NonCartUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Bundles__c</fullName>
        <label>Number of Bundles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Counts__c</fullName>
        <label>Number of Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_Avoid_Subtotal_Process_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Avoid Subtotal Process Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Group_Name__c</fullName>
        <formula>TEXT(ccrz__Product__r.Group_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OSM Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_Primary_Cart_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Primary Cart Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Product_T_C_Content__c</fullName>
        <label>OSM Product T&amp;C Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OSM_Product_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM Product T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Renew_Subscription_End_Date__c</fullName>
        <label>Renew Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSM_Renew_Subscription_Start_Date__c</fullName>
        <label>Renew Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OSM_Renewed_Sub_Id__c</fullName>
        <label>OSM Renewed Sub Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSM_SW_AddOn_Product_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AddOn Product Of</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>CC Cart Items (AddOn Product Of)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Product_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Link</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Cart Items (Product Link)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSM_SW_isCPGProduct__c</fullName>
        <formula>ccrz__DisplayProduct__r.QSOL_Power_Generation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCPGProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Item_Total__c</fullName>
        <description>This field is multiplication of original item price and original quantity</description>
        <formula>ccrz__Price__c  *  ccrz__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is multiplication of original item price and original quantity</inlineHelpText>
        <label>DBU Original_Item_Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductPackage__c</fullName>
        <formula>TEXT(ccrz__Product__r.Package__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductPackage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prorated_Coupon_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prorated Coupon Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorated_Price_AfterDiscount__c</fullName>
        <formula>IF(Prorated_Subamount__c &gt; Prorated_Coupon_Discount__c , Prorated_Subamount__c - Prorated_Coupon_Discount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is Prorated Subtotal after discount apply</inlineHelpText>
        <label>Prorated_Price_AfterDiscount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prorated_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prorated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prorated_Subamount__c</fullName>
        <formula>Custom_Proration_Price__c *  ccrz__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prorated Subamount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Expiry_Date__c</fullName>
        <label>Subscription Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Dn_Price__c</fullName>
        <label>Unit Dn Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertex_tax__c</fullName>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AbsoluteDiscount__c</fullName>
        <description>The absolute discount for this item in the cart</description>
        <label>Absolute Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AdjustmentAmount__c</fullName>
        <description>Additional Adjustment from the CSR</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>The availability message copied from the product inventory record when this item was added to the cart.</description>
        <label>Availability Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CartItemGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Order Item Group that the item belongs to. Used for Line Level Independence.</description>
        <label>Cart Item Group</label>
        <referenceTo>ccrz__E_CartItemGroup__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__CartItemId__c</fullName>
        <description>External id that can be used for data loads.</description>
        <externalId>true</externalId>
        <label>Cart Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <description>Reference to the parent cart.</description>
        <label>Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Category</label>
        <referenceTo>ccrz__E_Category__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Comments__c</fullName>
        <description>User entered comments on the line item.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to a Coupon applied to this line item.</description>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product used to display the name in the cart and link to product detail page</description>
        <label>Display Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Cart Items (Display Product)</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtName__c</fullName>
        <description>Defines a display Name to be used instead of the referenced Product Name for display in the cart/order.</description>
        <label>External Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ExtSKU__c</fullName>
        <description>Defines a display SKU to be used instead of the referenced Product SKU for display in the cart/order.</description>
        <externalId>true</externalId>
        <label>External SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <inlineHelpText>DEPRECATED</inlineHelpText>
        <label>Is Subscription Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemLabel__c</fullName>
        <description>NOT USED</description>
        <label>Item Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ItemStatus__c</fullName>
        <description>Cart item status driven by inventory rules.  With inventory enabled if there is insufficient inventory then the item will be marked Pre-Order.  Otherwise it will be Available.</description>
        <label>Item Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Pre-Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ItemTotal__c</fullName>
        <formula>ccrz__AdjustmentAmount__c  +  ccrz__SubAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalItemPrice__c</fullName>
        <description>The original price of the item before any modifiers are applied</description>
        <label>Original Item Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__OriginalQuantity__c</fullName>
        <description>Stores the original child quantity per unit for Kits, Bundles, and Dynamic Kits.</description>
        <label>Original Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentCartItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For minor line items this is the reference to the parent Major line item.</description>
        <label>Parent Cart Item</label>
        <referenceTo>ccrz__E_CartItem__c</referenceTo>
        <relationshipLabel>Cart Items</relationshipLabel>
        <relationshipName>Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT USED</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ParentProductID)</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PercentDiscount__c</fullName>
        <description>The percentage discount for this item in the cart</description>
        <label>Percent Discount</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccrz__Price__c</fullName>
        <description>The unit price of the line.</description>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingModifierTypes__c</fullName>
        <description>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</description>
        <inlineHelpText>Semi-Colon delimited List of Modifier types that are affecting the pricing of this Cart Item</inlineHelpText>
        <label>Pricing Modifier Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PricingType__c</fullName>
        <defaultValue>&quot;auto&quot;</defaultValue>
        <description>Defines how B2B Commerce internally handles the pricing for this cart/order item. If &apos;external&apos; then B2B Commerce pricing will not apply to the cart item (see further documentation for exact rules).</description>
        <label>Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PrimaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary CC Attribute selected for the related product</description>
        <label>Primary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>ccCartItemsPrim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>ProductType same as CartItemType</description>
        <label>ProductType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the product for this line item.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Cart Items (ProductID)</relationshipLabel>
        <relationshipName>E_CartItem2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of the line item.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPriceSubAmt__c</fullName>
        <description>Sub total for the recurring price</description>
        <label>Recurring Price Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RecurringPrice__c</fullName>
        <description>The recurring price portion of a subscription</description>
        <label>Recurring Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__RequestDate__c</fullName>
        <description>Requested date for the line item.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__SecondaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary attribute selected for the cart item&apos;s related cc product</description>
        <label>Secondary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items (Secondary Attribute)</relationshipLabel>
        <relationshipName>ccCartItemsSec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SelectedAttr__c</fullName>
        <description>Attributes Selected for the Cart Item&apos;s Related Product. Data is in JSON Form.</description>
        <label>Selected Attributes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Seller this Cart Item is to be purchased from.</description>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>E_CartItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StoreID__c</fullName>
        <description>The storefront to which this line and cart belong.</description>
        <label>Store ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubAmount__c</fullName>
        <description>Sub Amount total for the line.  Typically will be Price times Quantity.</description>
        <label>Sub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SubProdTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the specific subscription selected.</description>
        <label>SubProdTerm</label>
        <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
        <relationshipLabel>CC Cart Items</relationshipLabel>
        <relationshipName>CC_Cart_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>Duration of the subscription in months.  If this is field is blank, then this cart item is not a subscribed item.</inlineHelpText>
        <label>Subscription Duration (In Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>DEPRECATED</description>
        <inlineHelpText>The frequency of this subscription in days.  If not selected via the UI, then this value defaults to the Product&apos;s subscription frequency.</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__TertiaryAttr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Tertiary Attribute selected for the Cart Item&apos;s Related Product</description>
        <label>Tertiary Attribute</label>
        <referenceTo>ccrz__E_Attribute__c</referenceTo>
        <relationshipLabel>CC Cart Items (Tertiary Attribute)</relationshipLabel>
        <relationshipName>ccCartItemsTert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Unit of measure as copied from the product data.</description>
        <label>Unit Of Measure</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__cartItemType__c</fullName>
        <description>Defines the type of the line item.  Either Major (main line item), Minor (child line item), or Coupon.</description>
        <label>cart item type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                    <default>true</default>
                    <label>Major</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dbu_EmissionAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_EmissionAgreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Estimated_Delivery__c</fullName>
        <label>dbu_Estimated_Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Estimated_PickUp__c</fullName>
        <label>dbu_Estimated_PickUp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_ExportAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_ExportAgreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Item_ProductStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for denoting either product is instock or out of stock. This field is specifically created for wishlist for handling email notifications.</description>
        <inlineHelpText>This field is used for denoting either product is instock or out of stock. This field is specifically created for wishlist for handling email notifications.</inlineHelpText>
        <label>dbu_Item_ProductStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Make__c</fullName>
        <label>dbu_Make</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_Model__c</fullName>
        <label>dbu_Model</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_ShippingAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_ShippingAgreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_State__c</fullName>
        <label>dbu_State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_TncAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_TncAgreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_UnloadingAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_UnloadingAgreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_VIN__c</fullName>
        <label>dbu_VIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dbu_Vehicle_Powered__c</fullName>
        <label>dbu Vehicle Powered</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_WarrentyAggrement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_WarrentyAggrement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_Year__c</fullName>
        <label>dbu_Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dbu_isInStock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>dbu_isInStock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_isShipTo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked it means this cart item is shiptToAddress otherwise pick up from the store.</description>
        <inlineHelpText>If this checkbox is checked it means this cart item is shiptToAddress otherwise pick up from the store.</inlineHelpText>
        <label>dbu_isShipTo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isRenew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>isRenew will be checked if cart item is created for subscription renew</description>
        <label>isRenew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>withCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>withCoTerm</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Cart Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>CartItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>